Fix "overflow: hidden" on body

--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -3,6 +3,9 @@ html, body, * {
     padding: 0;
     box-sizing:border-box;
     color: $black;
+}
+
+html, body {
     overflow-y: hidden;
 }
 
